--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^5.3.3",
     "mongoose": "^5.13.5",
     "nodemon": "^2.0.12",
+    "validator": "^13.6.0",
     "yup": "^0.32.9"
   }
 }
