--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "interview",
   "version": "1.0.0",
-  "description": "",
+  "description": "EmailHandler is a web application that handles the user input from a url parameter to search or create emails using POST or GET",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "jest": "^27.0.6",
     "mongoose": "^5.13.5",
     "nodemon": "^2.0.12",
     "validator": "^13.6.0",
