--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon src/app.js"
   },
   "author": "Antonio J Correa",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
